--- a/G-Shot/Base.lproj/Main.storyboard
+++ b/G-Shot/Base.lproj/Main.storyboard
@@ -11,20 +11,20 @@
         <!--Library Collection View Controller-->
         <scene sceneID="r36-Nr-jPa">
             <objects>
-                <collectionViewController storyboardIdentifier="photo" id="7JW-Ft-hKo" customClass="LibraryCollectionViewController" customModule="G_Shot" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="photo" id="7JW-Ft-hKo" customClass="LibraryCollectionViewController" customModule="G_Book" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" id="1ta-03-rih">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="N99-Qe-22C">
                             <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="60"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photo" id="Vd9-Ut-xjd">
-                                <rect key="frame" x="5" y="60" width="50" height="50"/>
+                                <rect key="frame" x="5" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -32,10 +32,6 @@
                                 </view>
                             </collectionViewCell>
                         </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="header" id="y57-kK-NRw">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="7JW-Ft-hKo" id="jdO-p0-W5C"/>
                             <outlet property="delegate" destination="7JW-Ft-hKo" id="5D9-Cn-9l1"/>
